mplot 0.6.0 [2015-06-10]
------------------------

* First CRAN release
* Reimplemented vis function to 
  avoid massive memory use for moderate model
  sizes.  Now runs much faster and leaner.


mplot 0.5.5 [2015-04-10]
------------------------

* mplot interface now uses shinydashboard
* the scatterplot matrix from the mplot shiny
  interface has now been spun off into its 
  own package: parisD3
* issue with zooming on transparent reported to 
  GoogleCharts - the workaround is to not use
  backgroundColor = 'transparent' until it is fixed
  at the source


mplot 0.5.0 [2015-02-01]
------------------------

* Limited robustness via screening.
* Weights now get passed through in the adaptive fence.


mplot 0.4.9 [2014-12-05]
------------------------

* Changed parallel backend for af() from doMC
  to doParallel which should work for both
  unix-like systems and windows.
* Added redundant variable to vis().
* Fixed issue with deparse(model.formula)
  when the model.formula was too long for
  deparse to cope with.


mplot 0.4.7 [2014-11-10]
------------------------

* New data sets: diabetes and artificial example

mplot 0.4.6 [2014-10-15]
------------------------

* First public version

